<resources>
    <string name="app_name">GetPet</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>



    <string name="home_second">Home Second</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
</resources>
