<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:iconTint="@android:color/white"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:iconTint="@android:color/white"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/menu_categories" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:iconTint="@android:color/white"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/menu_logout" />
    </group>
</menu>
